tdf#162539 layoutInCell: limit vert to cell margin

Although horizontal offsets can go to the cell edge,
vertical offsets are limited to the cell margin.
Don't ask me why.

make CppunitTest_sw_ooxmlexport21 CPPUNIT_TEST_NAME=testTdf162551

Change-Id: I3741b46396b67f5e7ea3596e49730aea24e40c03
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172612
Tested-by: Justin Luth <jluth@mail.com>
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>